<resources>
    <string name="app_name">Nyampur</string>
    <string name="title_login">Get Started</string>
    <string name="description_login">Register to get the full experience.</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="action_continue">Continue</string>
    <string name="label_or">Or</string>
    <string name="action_continue_with_google">Continue with Google</string>
    <string name="prefix_indonesia_code">+62</string>
    <string name="title_otp_verification">OTP Verification</string>
    <string name="message_otp_verification">We send a code to your email</string>
    <string name="label_code_not_received">"Didn't get the code?  "</string>
    <string name="action_resend">Resend</string>
    <string name="content_description_resend_button">Resend Icon</string>
    <string name="hint_email">Enter your email</string>
    <string name="label_email">Email</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Email should contain a single \'@\'</string>
    <string name="label_home">Home</string>
    <string name="label_save">Save</string>
    <string name="hint_search">What do you want to make today?</string>
    <string name="label_ai_generated">AI-Generated</string>
    <string name="description_ai_generated">Find the best menu with ingredients you have</string>
    <string name="action_lets_start">Let\'s Start</string>
    <string name="title_quick_simple_meals">Quick and Simple Meals</string>
    <string name="title_error_unknown">Oops! Sorry, I think there is a problem with our server</string>
    <string name="action_try_again">Try Again</string>
    <string name="title_empty">There is no data, please come back again later</string>
    <string name="content_description_scan_ingredients">Button to go to the scan ingredients page</string>
    <string name="message_failed_save_recipe">Failed to save recipe</string>
    <string name="message_failed_delete_recipe">Failed to delete recipe</string>
    <string name="label_sort_by">Sort by</string>
    <string name="hint_choose_sort_by">Choose sort by</string>
    <string name="sort_recently">Recently Added</string>
    <string name="sort_level">Level (Easy to difficult)</string>
    <string name="sort_times">Minutes to Make (quick to slow)</string>
    <string name="sort_increasing">A - Z</string>
    <string name="sort_decreasing">Z - A</string>
    <string name="action_logout">Sign Out</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="message_sign_out">Are you sure you want to logout?</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>
    <string name="message_capture_image">Please ensure that the ingredient is in the camera frame.</string>
    <string name="message_camera_permission_required">You need grant camera permission to use this feature</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="description_ingredients">Add all your ingredients to determine the variety of food or drinks you can make.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="title_back_to_home">Back to Home</string>
    <string name="message_deleted_progress">We can’t recover the photos once you delete it.</string>
    <string name="action_retake">Retake</string>
    <string name="template_current_gallery_position">%1$d/%2$d</string>
    <string name="title_delete_this_photo">Delete this photo?</string>
    <string name="message_delete_this_photo">We can’t recover this photo once you delete it.</string>
    <string name="title_ingredient_list">Check the ingredients</string>
    <string name="description_ingredient_list">Make sure the ingredient names are correct.</string>
    <string name="title_edit_ingredient">Edit Ingredient</string>
    <string name="action_save">Save</string>
    <string name="hint_ingredient_name">Ingredient Name</string>
</resources>
