<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundOrange">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/cardMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMain"
        style="@style/CardViewTopRadiusStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:contentPaddingBottom="24dp"
        app:contentPaddingLeft="24dp"
        app:contentPaddingRight="24dp"
        app:contentPaddingTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/title_login"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:fontFamily="@font/satoshi_medium"
                android:text="@string/description_login"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:hint="@string/label_email"
                android:textColorHint="@color/colorTextSecondary"
                app:boxBackgroundColor="@color/selector_text_input_layout_background_color"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
                app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
                app:boxCornerRadiusTopEnd="@dimen/dimen_8dp"
                app:boxCornerRadiusTopStart="@dimen/dimen_8dp"
                app:boxStrokeColor="@color/selector_text_input_layout_stroke_color"
                app:boxStrokeErrorColor="@color/colorRed"
                app:boxStrokeWidth="@dimen/dimen_1dp"
                app:errorTextAppearance="@style/NyampurTextStyle.Medium.Small"
                app:errorTextColor="@color/colorRed"
                app:hintTextAppearance="@style/NyampurTextStyle.Medium"
                app:hintTextColor="@color/colorTextSecondary"
                app:placeholderText="@string/hint_email"
                app:placeholderTextAppearance="@style/NyampurTextStyle.Medium"
                app:placeholderTextColor="@color/colorTextSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_medium"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:enabled="false"
                android:fontFamily="@font/satoshi_bold"
                android:insetLeft="@dimen/dimen_0dp"
                android:insetTop="@dimen/dimen_0dp"
                android:insetRight="@dimen/dimen_0dp"
                android:insetBottom="@dimen/dimen_0dp"
                android:text="@string/action_continue"
                android:textSize="@dimen/text_size_16sp"
                app:backgroundTint="@color/selector_button_background_color"
                app:cornerRadius="@dimen/dimen_8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/label_or"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="@font/satoshi_bold"
                android:insetLeft="@dimen/dimen_0dp"
                android:insetTop="@dimen/dimen_0dp"
                android:insetRight="@dimen/dimen_0dp"
                android:insetBottom="@dimen/dimen_0dp"
                android:text="@string/action_continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorGrey"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconSize="22dp"
                app:iconTintMode="multiply" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>