<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewPrefixBottomSheetRadiusStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dimen_0dp"
    app:contentPaddingBottom="@dimen/dimen_24dp"
    app:contentPaddingLeft="@dimen/dimen_24dp"
    app:contentPaddingRight="@dimen/dimen_24dp"
    app:contentPaddingTop="@dimen/dimen_24dp"
    app:strokeWidth="@dimen/dimen_0dp"
    tools:background="@color/colorGreyBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/NyampurTextStyle.Bold.TextPrimary"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sort_by"
                android:textSize="@dimen/text_size_22sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_dropdown" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NyampurTextStyle.Medium"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_recently"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioRecentlyAdded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_0dp"
                    android:minHeight="@dimen/dimen_0dp"
                    android:padding="@dimen/dimen_0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NyampurTextStyle.Medium"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_level"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_0dp"
                    android:minHeight="@dimen/dimen_0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NyampurTextStyle.Medium"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_times"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioMinutesToMake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_0dp"
                    android:minHeight="@dimen/dimen_0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NyampurTextStyle.Medium"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_increasing"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioAToZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_0dp"
                    android:minHeight="@dimen/dimen_0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NyampurTextStyle.Medium"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_decreasing"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioZToA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_0dp"
                    android:minHeight="@dimen/dimen_0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>